--- a/views/home/partials/banner.ejs
+++ b/views/home/partials/banner.ejs
@@ -8,7 +8,7 @@
 
                     <div class="block1-wrapbtn w-size2">
                         <!-- Button -->
-                        <a href="/metallic" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
+                        <a href="products/categories?category=metallic" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
                             Shop Metallic
                         </a>
                     </div>
@@ -34,7 +34,7 @@
 
                     <div class="block1-wrapbtn w-size2">
                         <!-- Button -->
-                        <a href="/glamour" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
+                        <a href="products/categories?category=glamour" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
                             Shop Glamour
                         </a>
                     </div>
@@ -46,7 +46,7 @@
 
                     <div class="block1-wrapbtn w-size2">
                         <!-- Button -->
-                        <a href="/exclusives" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
+                        <a href="products/categories?category=exclusives" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
                             Shop Exclusives
                         </a>
                     </div>
@@ -60,7 +60,7 @@
 
                     <div class="block1-wrapbtn w-size2">
                         <!-- Button -->
-                        <a href="/stripes" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
+                        <a href="products/categories?category=stripes" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
                             Shop Stripes
                         </a>
                     </div>
