add colors, measurements

--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -96,6 +96,8 @@
                                         <input 
                                             class="form-control text-box"
                                             type="number"
+                                            min=0
+                                            step=1
                                             id="quantity"
                                             name="quantity"
                                             placeholder="Enter the number of products"
@@ -112,6 +114,8 @@
                                         <input 
                                             class="form-control text-box"
                                             type="number"
+                                            min=0
+                                            step=0.25
                                             id="regularPrice"
                                             name="regularPrice"
                                             placeholder="0.000"
@@ -128,6 +132,8 @@
                                         <input 
                                         class="form-control text-box"
                                         type="number"
+                                        min=0
+                                        step=0.25
                                         id="discountPrice"
                                         name="discountPrice"
                                         placeholder="0.000"
