--- a/views/admin/sidebar-wrapper.ejs
+++ b/views/admin/sidebar-wrapper.ejs
@@ -64,6 +64,26 @@
             </a>
         </div>
         <div class="container-fluid">
+            <a href="/admin/colors" class="text-center">
+                <div>
+                    <i class="fas fa-palette fa-2x"></i>
+                </div>
+                <div>
+                    <p>Colors</p>
+                </div> 
+            </a>
+        </div>
+        <div class="container-fluid">
+            <a href="/admin/measurements" class="text-center">
+                <div>
+                    <i class="fas fa-ruler fa-2x"></i>
+                </div>
+                <div>
+                    <p>Measurements</p>
+                </div> 
+            </a>
+        </div>
+        <div class="container-fluid">
             <button class="dropdown-btn text-center">
                 <div>
                     <i class="fa fa-money fa-2x"></i>
