--- a/public/css/bootstrap-tagsinput.css
+++ b/public/css/bootstrap-tagsinput.css
@@ -36,7 +36,11 @@
   box-shadow: none;
 }
 .bootstrap-tagsinput .tag {
-  background-color: #31b0d5;
+  border: 1px solid !important;
+  border-radius: 15px;
+  padding: 5px;
+  margin: 2px;
+  background-color: #d3d3d3bf;
   margin-right: 2px;
   color: black;
 }
