--- a/views/admin/productForm.ejs
+++ b/views/admin/productForm.ejs
@@ -87,6 +87,30 @@
                                         </select>
                                     </div>
                                 </div>
+
+                                <div class="form-group">
+                                    <label class="col-md-auto control-label" for="colors"><b>Colors</b></label>
+                                    <div class="col-md-auto">
+                                        <select class="select-chosen text-box" id="colors" name="colors[]" data-role="tagsinput" multiple>
+                                            <option value="color1">Color 1</option>
+                                            <option value="color2">Color 2</option>
+                                            <option value="color3">Color 3</option>
+                                            <option value="color4">Color 4</option>
+                                        </select>
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <label class="col-md-auto control-label" for="measure"><b>Measure</b></label>
+                                    <div class="col-md-auto">
+                                        <select class="select-chosen text-box" id="measure" name="measure[]" data-role="tagsinput" multiple>
+                                            <option value="measure1">Measure 1</option>
+                                            <option value="measure2">Measure 2</option>
+                                            <option value="measure3">Measure 3</option>
+                                            <option value="measure4">Measure 4</option>
+                                        </select>
+                                    </div>
+                                </div>
                                 
                                 <div class="form-group">
                                     <label class="col-md-auto control-label" for="quantity"><b>Quantity</b></label>
@@ -94,8 +118,8 @@
                                         <input 
                                             class="form-control text-box"
                                             type="number"
-					    min=0
-					    step=1
+                                            min=0
+                                            step=1
                                             id="quantity"
                                             name="quantity"
                                             placeholder="Enter the number of products"
@@ -128,8 +152,8 @@
                                         <input 
                                         class="form-control text-box"
                                         type="number"
-					min=0
-					step=0.25
+                                        min=0
+                                        step=0.25
                                         id="discountPrice"
                                         name="discountPrice"
                                         placeholder="0.00"
