--- a/views/home/products.ejs
+++ b/views/home/products.ejs
@@ -43,14 +43,37 @@
                         <% }); %>
                     </div>
 
-			<div class="flex-w p-b-54">
-				<form action="/search" method="POST">
-					<button type="submit"><i class="fas fa-search"></i></button>
-      					<input type="text" placeholder="Search.." name="search" class="search-box border p-1"/>
-    				</form>
-			</div>
-                
-		</div>
+                    <h4 class="m-text14 p-b-7">
+                        Colors
+                    </h4>
+
+                    <div class="wrap-tags flex-w p-b-54">
+                        <% colors.forEach(function(color) { %>
+                                <a href="/products/colors?color=<%= color.name %>" class="tag-item s-text13">
+                                    <%= color.name %>
+                                </a>
+                        <% }); %>
+                    </div>
+
+                    <h4 class="m-text14 p-b-7">
+                        Measurements
+                    </h4>
+
+                    <div class="wrap-tags flex-w p-b-54">
+                        <% measurements.forEach(function(measure) { %>
+                                <a href="/products/measurements?measure=<%= measure.measure %>" class="tag-item s-text13">
+                                    <%= measure.measure %>
+                                </a>
+                        <% }); %>
+                    </div>
+
+                    <div class="flex-w p-b-54">
+                        <form action="/search" method="POST">
+                            <button type="submit"><i class="fas fa-search"></i></button>
+                            <input type="text" placeholder="Search.." name="search" class="search-box border p-1"/>
+                        </form>
+                    </div>
+		        </div>
             </div>
 
             <div class="col-sm-6 col-md-8 col-lg-9 p-b-50">
@@ -58,42 +81,42 @@
                 <div class="flex-sb-m flex-w p-b-35">
                     <div class="flex-w">
 
-			<div class="dropdown border p-t-2 p-b-2 p-l-10 p-r-10">
-                        	<button class="btn shadow p-0 bg-white rounded dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <div class="dropdown border p-t-2 p-b-2 p-l-10 p-r-10">
+                            <button class="btn shadow p-0 bg-white rounded dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="d-block">
-                           	     <h6>Default Sorting</h6>
-                           	</span>
-                       		</button>
-                       		 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                           		 <a class="dropdown-item" href="/products?sort=popular">Popular</a>
-                           		 <a class="dropdown-item" href="/products?sort=new">Newest</a>
-					 <a class="dropdown-item" href="/products?sort=old">Oldest</a>
-					 <a class="dropdown-item" href="/products?sort=ascending">Low To High</a>
-                           		 <a class="dropdown-item" href="/products?sort=descending">High To Low</a>
-                       		 </div>
-                   	 </div>
-				
- 			<div class="dropdown m-l-20 border p-t-2 p-b-2 p-l-30 p-r-30">
-                                <button class="btn shadow p-0 bg-white rounded dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <h6>Default Sorting</h6>
+                            </span>
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item" href="/products?sort=popular">Popular</a>
+                                <a class="dropdown-item" href="/products?sort=new">Newest</a>
+                                <a class="dropdown-item" href="/products?sort=old">Oldest</a>
+                                <a class="dropdown-item" href="/products?sort=ascending">Low To High</a>
+                                <a class="dropdown-item" href="/products?sort=descending">High To Low</a>
+                            </div>
+                        </div>
+                            
+                        <div class="dropdown m-l-20 border p-t-2 p-b-2 p-l-30 p-r-30">
+                            <button class="btn shadow p-0 bg-white rounded dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="d-block">
-                                     <h6>Price</h6>
+                                        <h6>Price</h6>
                                 </span>
-                                </button>
-                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                        <a class="dropdown-item" href="/products?min=0.0&max=50.0">$0.00 - $50.00</a>
-                                        <a class="dropdown-item" href="/products?min=50.0&max=100.0">$50.00 - $100.00</a>
-                                        <a class="dropdown-item" href="/products?min=100.0&max=150.0">$100.00 - $150.00</a>
- 					<a class="dropdown-item" href="/products?min=150.0&max=200.0">$150.00 - $200.00</a>
- 					<a class="dropdown-item" href="/products?min=200.0">$200.00+</a>
-                                 </div>
-                         </div>
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item" href="/products?min=0.0&max=50.0">$0.00 - $50.00</a>
+                                <a class="dropdown-item" href="/products?min=50.0&max=100.0">$50.00 - $100.00</a>
+                                <a class="dropdown-item" href="/products?min=100.0&max=150.0">$100.00 - $150.00</a>
+                                <a class="dropdown-item" href="/products?min=150.0&max=200.0">$150.00 - $200.00</a>
+                                <a class="dropdown-item" href="/products?min=200.0">$200.00+</a>
+                            </div>
+                        </div>
 
                     </div>
 
                     <span class="s-text8 p-t-5 p-b-5">
                         Showing <%= products.length %> results
                     </span>
-                </div>
+                 </div>
 
                 <!-- Product -->
                 <div class="row">
