--- a/views/home/partials/header.ejs
+++ b/views/home/partials/header.ejs
@@ -166,11 +166,10 @@
 
                 <li class="item-topbar-mobile p-l-10">
                     <div class="topbar-social-mobile">
-                        <a href="#" class="topbar-social-item fa fa-facebook"></a>
-                        <a href="#" class="topbar-social-item fa fa-instagram"></a>
-                        <a href="#" class="topbar-social-item fa fa-pinterest-p"></a>
-                        <a href="#" class="topbar-social-item fa fa-snapchat-ghost"></a>
-                        <a href="#" class="topbar-social-item fa fa-youtube-play"></a>
+                        <a href="#" class="topbar-social-item fab fa-facebook"></a>
+                        <a href="#" class="topbar-social-item fab fa-instagram"></a>
+                        <a href="#" class="topbar-social-item fab fa-snapchat-ghost"></a>
+                        <a href="#" class="topbar-social-item fab fa-youtube-play"></a>
                     </div>
                 </li>
 
