--- a/views/home/partials/header.ejs
+++ b/views/home/partials/header.ejs
@@ -15,7 +15,7 @@
 
             <div class="topbar-child2">
                 <span class="topbar-email">
-                    info@example.com
+                    giaydantuongthuydien@gmail.com
                 </span>
             </div>
             
