--- a/views/home/partials/header.ejs
+++ b/views/home/partials/header.ejs
@@ -24,7 +24,7 @@
         <div class="wrap_header">
             <!-- Logo -->
             <a href="/" class="logo">
-                <img src="/images/icons/logo1.jpg" alt="IMG-LOGO">
+                <img src="/images/icons/logo.png" alt="IMG-LOGO">
             </a>
 
             <!-- Menu -->
@@ -110,7 +110,7 @@
     <div class="wrap_header_mobile">
         <!-- Logo moblie -->
         <a href="/" class="logo-mobile">
-            <img src="/images/icons/logo1.jpg" alt="IMG-LOGO">
+            <img src="/images/icons/logo.png" alt="IMG-LOGO">
         </a>
 
         <!-- Button show menu -->
