--- a/views/home/partials/banner.ejs
+++ b/views/home/partials/banner.ejs
@@ -76,7 +76,7 @@
                         </h4>
 
                         <p class="t-center w-size4">
-                            Be the frist to know about the latest fashion news and get exclu-sive offers
+                            Be the first to know about the latest fashion news and get exclu-sive offers
                         </p>
 
                         <div class="w-size2 p-t-25">
