--- a/views/home/products.ejs
+++ b/views/home/products.ejs
@@ -127,7 +127,7 @@
                         <!-- Block2 -->
                         <div class="block2">
                             <!-- <div class="block2-img wrap-pic-w of-hidden pos-relative "> -->
-                            <div class="block2-img wrap-pic-w of-hidden pos-relative <%if (product.isSale) { %>block2-labelsale <% } else { %> block2-labelnew <% } %>">
+                            <div class="block2-img wrap-pic-w of-hidden pos-relative <%if (product.isSale) { %>block2-labelsale <% } %>">
                                 <img src="<%= product.imageUrl[0] %>" alt="IMG-PRODUCT">
         
                                 <div class="block2-overlay trans-0-4">
