--- a/views/admin/header.ejs
+++ b/views/admin/header.ejs
@@ -1,6 +1,6 @@
 <header class="container-fluid">
-    <a class="btn btn-light" role="button" href="#">
-        <img src="/images/icons/logo.png" alt="image" class="rounded">
+    <a class="btn btn-light" role="button" href="/admin">
+        <img src="/images/icons/logo.png" alt="image" class="rounded" style="max-height:120px">
     </a>
     
     <a class="btn btn-light" role="button" href="#menu-toggle" id="menu-toggle">
