--- a/views/home/partials/featuredProducts.ejs
+++ b/views/home/partials/featuredProducts.ejs
@@ -13,7 +13,7 @@
                     <div class="item-slick2 p-l-15 p-r-15">
                         <!-- Block2 -->
                         <div class="block2">
-                            <div class="block2-img wrap-pic-w of-hidden pos-relative <% if(product.isSale) { %> block2-labelsale <% } else {%> block2-labelnew <% } %>">
+                            <div class="block2-img wrap-pic-w of-hidden pos-relative <% if(product.isSale) { %> block2-labelsale <% } %>">
                                 <img src="<%= product.imageUrl[0]%>" alt="IMG-PRODUCT">
     
                                 <div class="block2-overlay trans-0-4">
